--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "server": "nodemon server.js --ignore '../client/'",
+    "client": "npm start --prefix ../client",
+    "dev": "concurrently  \"npm run server\" \"npm run client\"",
+    "start": "node index.js",
+    "build": "npm install --prefix ../client && npm run build --prefix ../client"
   },
   "keywords": [],
   "author": "",
